HelloUltraviolet/Fixtures/RejectedSource/Procedures/BehavioralSubtypingPostcondition/Expected.uv
//! Expected diagnostic metadata for the BehavioralSubtypingPostcondition rejected-source specimen.

expectedDiagnostic("E-SEM-2804", "req.15.BehavioralSubtypingPostconditionRule")
